# query-crafter-cli

./: .gitignore  LICENSE  README.md  cloudcall.py  config_crud.py  localcall.py  pyproject.toml  requirements.txt  run.py  schema.txt  x.py
nl2sql/: cli.py  config.py  llm.py  tutorial_system.py
query_crafter_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_llm_status.py
