[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "query-crafter-cli"
version = "0.1.0"
description = "CLI tool for natural language to any database query conversion"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name="Siddharth Patil", email="siddharthpatil0206@gmail.com" }
]

dependencies = [
  "click>=8.1.7",
  "rich>=13.9.4",
  "pyperclip>=1.9.0",
  "openai>=1.102.0",
  "requests>=2.32.5"
]

[project.scripts]
qcraft = "nl2sql.cli:cli"
